dfir_rs/tests/compile-fail/surface_use_bad1.stderr
error: expected one of: identifier, `self`, `super`, `crate`, `try`, `*`, curly braces
 --> tests/compile-fail/surface_use_bad1.rs:5:16
  |
5 |         use x::;
  |                ^
